[package]
name = "lson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"]}
colored = "2.1.0"
rand = "0.8.5"
regex = "1.10.5"
rust-crypto = "0.2.36"
serde_json = "1.0.116"
toml = "0.8.12"
